--- a/src/footer.haml
+++ b/src/footer.haml
@@ -19,8 +19,8 @@
   geo_location();
   resizeSidebar();
 
-  $(".user_config").click(function() {
-    $(".config_box").toggle();
+  $(".user-config").click(function() {
+    $(".config-box").toggle();
   });
 
 
