--- a/src/index.haml
+++ b/src/index.haml
@@ -1,4 +1,4 @@
-//=require header.haml
+//=include header.haml
 
 .dashboard(role="main")
   .top
@@ -58,5 +58,7 @@
 
       %a(class="btn btn-lg btn-success btn-ring" href="#" role="button") Ring ma' bell
 
+:javascript
+  var page = "index";
 
-//=require footer.haml
+//=include footer.haml
